k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: game-servers
  labels:
    app: fortezza-game-server
